# unpyc37-3.10

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  six.py
.github/workflows/: python-app.yml
src/: more_opcodes.py  unpyc3.py
src/unpyc/: unpyc3.py
tests/: conftest.py
tests/unpyc/unit/: syntax_test_all.py  test_utilities.py  unpyc3_tests.py
tests/unpyc/unit/test_cases/annotations/: annotation_return_type.py  kwarg_annotation.py  posarg_annotation.py
tests/unpyc/unit/test_cases/assert/: assert_with_message.py
tests/unpyc/unit/test_cases/assignment/: unpack_assign.py  unpack_assign_three.py
tests/unpyc/unit/test_cases/async/: async_def.py  async_for.py
tests/unpyc/unit/test_cases/calls/: call_kwarg_and_multiple_kwarg_unwrap.py  call_multiple_kwarg_unwrap.py  call_vararg_kwargs_varkwarg.py  call_with_dict_unpack_kwarg.py  call_with_posargs_args_kwargs.py  call_with_unpack_invalid_kwarg_name.py
tests/unpyc/unit/test_cases/classes/: basic_class.py  class_private_variable_naming.py
tests/unpyc/unit/test_cases/comprehensions/: basic_list_comprehension.py  dictionary_comprehension_with_condition.py  list_comprehension_with_condition.py
tests/unpyc/unit/test_cases/conditionals/: basic_if_else.py  complex_if_1.py  if_and.py  if_and_else.py  if_and_is_not.py  if_and_or_then.py  if_if_then.py  if_return_else_return.py  if_while_if.py  multiple_non_nested_ifs.py  while_if_chained_condition.py
tests/unpyc/unit/test_cases/expressions/: and_and_not.py  double_binary_chain_if.py  or_and.py  ternary.py
tests/unpyc/unit/test_cases/functions/: function_with_args_kwargs_defaults.py
tests/unpyc/unit/test_cases/generators/: if_yield_from_else_return.py
tests/unpyc/unit/test_cases/imports/: import_as.py  import_from.py
tests/unpyc/unit/test_cases/lambdas/: lambda_basic.py  lambda_return_if_else.py  lambda_return_if_else_none.py  lambda_yield.py
tests/unpyc/unit/test_cases/literals/: formatted_string.py  formatted_string_assign.py  formatted_string_newline.py  formatted_string_single.py  formatted_string_str.py  formatted_string_with_brackets.py
tests/unpyc/unit/test_cases/loops/: basic_for.py  for_else.py  for_return.py  if_while_true_break.py  if_while_true_else.py  while_if_break.py  while_true.py  while_true_if.py  while_true_if_break.py
tests/unpyc/unit/test_cases/returns/: yield.py  yield_from.py
tests/unpyc/unit/test_cases/try_except/: except_named_error.py  try_except_else.py  try_except_empty_return.py  try_except_next_end_of_loop.py  try_except_return.py  try_except_return_return.py  try_finally_return.py  try_named_except_else.py  try_return.py
tests/unpyc/unit/test_cases/unpack/: dict_unpack.py  list_unpack.py
unpyc/: __init__.py  more_opcodes.py  opcodes.py  setup.py  unpyc3.py
unpyc/tests/: test_utilities.py
unpyc/tests/unit/test_cases/annotations/: kwarg_and_posarg_annotation.py  posarg_posarg_unpack_annotation.py
unpyc/tests/unit/test_cases/assert/: basic_assert.py
unpyc/tests/unit/test_cases/async/: async_await_parameter.py  async_generator.py  async_return_await_parameter.py  async_with.py
unpyc/tests/unit/test_cases/classes/: basic_class_old.py
unpyc/tests/unit/test_cases/comprehensions/: basic_dictionary_comprehension.py  dictionary_comprehension_with_condition2.py  (+1 more)
(+55 files in other folders)
